# svi.on.mnist

./: .gitignore  CHANGES_COMPARISON.md  NOTEBOOK_STRUCTURE.md  OPTIMIZATION_SUMMARY.md  QUICK_START_OPTIMIZED.md  README.md  VALIDATION_UPDATE.md  WANDB_GUIDE.md  add_vastai_to_ssh.py  data.ipynb  data.py  ddpm_blog_post_demonstration.ipynb  ddpm_unet.ipynb  diffusion_on_sudoku.ipynb  diffusion_on_sudoku.py  improved_svi_mixture.py  llm_on_sudoku.ipynb  main.py  mnist_loader.py  pyproject.toml  sudoku.py  sudoku2vec_trained_model.pt  sudoku_checkpoints  svi.py  svi_mixture_model.ipynb  test_sudoku.ipynb  variational-autoencode.ipynb
sudoku_checkpoints/: sudoku2vec_final_emb15.pt  sudoku_emb12_att9_h9_bs512_lr0.001_epoch10.pt  sudoku_emb12_att9_h9_bs512_lr0.001_epoch100.pt  sudoku_emb12_att9_h9_bs512_lr0.001_epoch20.pt  sudoku_emb12_att9_h9_bs512_lr0.001_epoch30.pt  sudoku_emb12_att9_h9_bs512_lr0.001_epoch40.pt  sudoku_emb12_att9_h9_bs512_lr0.001_epoch50.pt  sudoku_emb12_att9_h9_bs512_lr0.001_epoch60.pt  sudoku_emb12_att9_h9_bs512_lr0.001_epoch70.pt  sudoku_emb12_att9_h9_bs512_lr0.001_epoch80.pt  sudoku_emb12_att9_h9_bs512_lr0.001_epoch90.pt  sudoku_emb12_att9_h9_bs512_lr0.001_final.pt  sudoku_emb15_att9_h9_bs512_lr0.001_epoch10.pt  sudoku_emb15_att9_h9_bs512_lr0.001_epoch100.pt  sudoku_emb15_att9_h9_bs512_lr0.001_epoch20.pt  sudoku_emb15_att9_h9_bs512_lr0.001_epoch30.pt  sudoku_emb15_att9_h9_bs512_lr0.001_epoch40.pt  sudoku_emb15_att9_h9_bs512_lr0.001_epoch50.pt  sudoku_emb15_att9_h9_bs512_lr0.001_epoch60.pt  sudoku_emb15_att9_h9_bs512_lr0.001_epoch70.pt  (+36 more)
