[project]
name = "svi-on-mnist"
version = "0.1.0"
description = "A working example of Bayesian Logistic Regression using Stochastic Variational Inference"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "autograd",
    "matplotlib",
    "numpy",
    "scipy",
    "seaborn",
    "future",
    "torch>=2.5.1",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "transformers>=4.46.3",
]
